--- a/js/jquery-timer-master/demo.html
+++ b/js/jquery-timer-master/demo.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="res/style.css" />
     <script type="text/javascript" src="res/jquery.min.js"></script>
-    <script type="text/javascript" src="jquery.timer.js"></script>
+    <script type="text/javascript" src="../jquery.timer.js"></script>
     <script type="text/javascript" src="res/demo.js"></script>
 </head> 
 <body>
